--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 networks:
   backend:
-    driver: bridge
+    driver: ${NETWORKS_DRIVER}
 
 services:
   redis:
@@ -10,13 +10,13 @@ services:
     build:
       context: ./redis
     environment:
-      - TZ=Asia/Shanghai
+      - TZ=${TZ}
     privileged: true
     volumes:
-      - ./redis/data:/data
-      - ./redis/conf/redis.conf:/etc/redis/redis.conf
+      - ${REDIS_DATA_PATH_HOST}:/data
+      - ${REDIS_CONF}:/etc/redis/redis.conf
     ports:
-      - 6379:6379
+      - ${REDIS_PORT}:6379
     networks:
       - backend
     restart: always
@@ -27,16 +27,30 @@ services:
     build:
       context: ./mysql
     environment:
-      - TZ=Asia/Shanghai
-      - MYSQL_USER=admin              # 设置 Mysql 用户名称
-      - MYSQL_PASSWORD=123456              # 设置 Mysql 用户密码
-      - MYSQL_ROOT_PASSWORD=123456    # 设置 Mysql root 用户密码
+      - TZ=${TZ}
+      - MYSQL_USER=${MYSQL_USERNAME}                  # 设置 Mysql 用户名称
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}              # 设置 Mysql 用户密码
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}    # 设置 Mysql root 用户密码
     privileged: true
     volumes:
-      - ./mysql/data:/var/lib/mysql        # 引用 .env 配置中 DATA_PATH_HOST 变量，将宿主机上存放 Mysql 数据的目录挂载到容器中 /var/lib/mysql 目录
-      - ./mysql/conf/my.cnf:/etc/my.cnf   # 引用 .env 配置中 CONF_PATH_HOST 变量，将宿主机上存放 Mysql 配置文件的目录挂载到容器中 /etc/mysql/conf.d 目录
+      - ${MYSQL_DATA_PATH_HOST}:/var/lib/mysql        # 引用 .env 配置中 DATA_PATH_HOST 变量，将宿主机上存放 Mysql 数据的目录挂载到容器中 /var/lib/mysql 目录
+      - ${MYSQL_CONF}:/etc/my.cnf   # 引用 .env 配置中 CONF_PATH_HOST 变量，将宿主机上存放 Mysql 配置文件的目录挂载到容器中 /etc/mysql/conf.d 目录
     ports:
       - "3306:3306"                          # 设置容器3306端口映射指定宿主机端口
+    networks:
+      - backend
+    restart: always
+
+  etcd: # 自定义容器名称
+    container_name: etcd
+    build:
+      context: ./etcd                    # 指定构建使用的 Dockerfile 文件
+    environment:
+      - TZ=${TZ}
+      - ALLOW_NONE_AUTHENTICATION=yes
+      - ETCD_ADVERTISE_CLIENT_URLS=http://etcd:2379
+    ports: # 设置端口映射
+      - "${ETCD_PORT}:2379"
     networks:
       - backend
     restart: always
