--- a/.env
+++ b/.env
@@ -9,15 +9,18 @@ MYSQL_PORT=3306
 MYSQL_USERNAME=admin
 MYSQL_PASSWORD=123456
 MYSQL_ROOT_PASSWORD=123456
-MYSQL_DATA_PATH_HOST=./mysql/data
+MYSQL_DATA_PATH=./mysql/data
 MYSQL_CONF=./mysql/conf/my.cnf
 
 # REDIS ##########################################
 # Redis 服务映射宿主机端口号，可在宿主机127.0.0.1:6379访问
 REDIS_PORT=6379
 REDIS_CONF=./redis/conf/redis.conf
-REDIS_DATA_PATH_HOST=./redis/data
+REDIS_DATA_PATH=./redis/data
 
 # ETCD ###########################################
 # Etcd 服务映射宿主机端口号，可在宿主机127.0.0.1:2379访问
 ETCD_PORT=2379
+ETCD_DATA_PATH=./etcd/data
+
+ETCD_MANAGE_PORT=7001
