--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - TZ=${TZ}
     privileged: true
     volumes:
-      - ${REDIS_DATA_PATH_HOST}:/data
+      - ${REDIS_DATA_PATH}:/data
       - ${REDIS_CONF}:/etc/redis/redis.conf
     ports:
       - ${REDIS_PORT}:6379
@@ -33,7 +33,7 @@ services:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}    # 设置 Mysql root 用户密码
     privileged: true
     volumes:
-      - ${MYSQL_DATA_PATH_HOST}:/var/lib/mysql        # 引用 .env 配置中 DATA_PATH_HOST 变量，将宿主机上存放 Mysql 数据的目录挂载到容器中 /var/lib/mysql 目录
+      - ${MYSQL_DATA_PATH}:/var/lib/mysql        # 引用 .env 配置中 DATA_PATH_HOST 变量，将宿主机上存放 Mysql 数据的目录挂载到容器中 /var/lib/mysql 目录
       - ${MYSQL_CONF}:/etc/my.cnf   # 引用 .env 配置中 CONF_PATH_HOST 变量，将宿主机上存放 Mysql 配置文件的目录挂载到容器中 /etc/mysql/conf.d 目录
     ports:
       - "3306:3306"                          # 设置容器3306端口映射指定宿主机端口
@@ -47,10 +47,28 @@ services:
       context: ./etcd                    # 指定构建使用的 Dockerfile 文件
     environment:
       - TZ=${TZ}
-      - ALLOW_NONE_AUTHENTICATION=yes
-      - ETCD_ADVERTISE_CLIENT_URLS=http://etcd:2379
+      - ALLOW_NONE_AUTHENTICATION=yes       #参数指不用密码可以连接
+      - ETCD_ADVERTISE_CLIENT_URLS=http://0.0.0.0:2379
+      - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379
     ports: # 设置端口映射
       - "${ETCD_PORT}:2379"
+      - "2380:2380"
+    volumes:
+      - ${ETCD_DATA_PATH}:/bitnami/etcd/data
+    networks:
+      - backend
+    restart: always
+
+  etcd-manage:
+    container_name: etcd-manage
+    build:
+      context: ./etcd-manage
+    environment:
+      - TZ=${TZ}
+    ports:
+      - "${ETCD_MANAGE_PORT}:8080"                    # 设置容器8080端口映射指定宿主机端口，用于宿主机访问可视化web
+    depends_on: # 依赖容器
+      - etcd                                          # 在 etcd 服务容器启动后启动
     networks:
       - backend
     restart: always
