--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
 # 设置时区
 TZ=Asia/Shanghai
+
 # 设置网络模式
 NETWORKS_DRIVER=bridge
+
+# PATHS ##########################################
+# 宿主机上代码存放的目录路径
+CODE_PATH_HOST=/Users/zhoutao/project/code
 
 # MYSQL ##########################################
 # Mysql 服务映射宿主机端口号，可在宿主机127.0.0.1:3306访问
@@ -24,3 +29,24 @@ ETCD_PORT=2379
 ETCD_DATA_PATH=./etcd/data
 
 ETCD_MANAGE_PORT=7001
+
+# PROMETHEUS #####################################
+# Prometheus 服务映射宿主机端口号，可在宿主机127.0.0.1:3000访问
+PROMETHEUS_PORT=3000
+
+
+# GRAFANA ########################################
+# Grafana 服务映射宿主机端口号，可在宿主机127.0.0.1:4000访问
+GRAFANA_PORT=4000
+
+
+# JAEGER #########################################
+# Jaeger 服务映射宿主机端口号，可在宿主机127.0.0.1:5000访问
+JAEGER_PORT=5001
+
+
+# DTM #########################################
+# DTM HTTP 协议端口号
+DTM_HTTP_PORT=36789
+# DTM gRPC 协议端口号
+DTM_GRPC_PORT=36790
