feat:repair etcd server

--- a/.env
+++ b/.env
@@ -3,6 +3,16 @@ TZ=Asia/Shanghai
 
 # 设置网络模式
 NETWORKS_DRIVER=bridge
+NETWORKS_SUBNET=172.16.1.0/24
+GOLANG_IP=172.16.1.10
+REDIS_IP=172.16.1.2
+MYSQL_IP=172.16.1.3
+ETCD_IP=172.16.1.4
+ETCD_MANAGE_IP=172.16.1.5
+PROMETHEUS_IP=172.16.1.6
+GRAFANA_IP=172.16.1.7
+JAEGER_IP=172.16.1.8
+DTM_IP=172.16.1.9
 
 # PATHS ##########################################
 # 宿主机上代码存放的目录路径
@@ -27,23 +37,19 @@ REDIS_DATA_PATH=./redis/data
 # Etcd 服务映射宿主机端口号，可在宿主机127.0.0.1:2379访问
 ETCD_PORT=2379
 ETCD_DATA_PATH=./etcd/data
-
 ETCD_MANAGE_PORT=7001
 
 # PROMETHEUS #####################################
 # Prometheus 服务映射宿主机端口号，可在宿主机127.0.0.1:3000访问
 PROMETHEUS_PORT=3000
 
-
 # GRAFANA ########################################
 # Grafana 服务映射宿主机端口号，可在宿主机127.0.0.1:4000访问
 GRAFANA_PORT=4000
 
-
 # JAEGER #########################################
 # Jaeger 服务映射宿主机端口号，可在宿主机127.0.0.1:5000访问
 JAEGER_PORT=5001
-
 
 # DTM #########################################
 # DTM HTTP 协议端口号
