feat:modify dtm

--- a/.env
+++ b/.env
@@ -50,6 +50,7 @@ GRAFANA_PORT=4000
 # JAEGER #########################################
 # Jaeger 服务映射宿主机端口号，可在宿主机127.0.0.1:5000访问
 JAEGER_PORT=5001
+JAEGER_AGENT_PORT=14268
 
 # DTM #########################################
 # DTM HTTP 协议端口号
