--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -29,46 +29,46 @@ scrape_configs:
       - targets: ["localhost:9090"]
 
   # 我们自己的商城项目配置
-  - job_name: 'mall'
+  - job_name: 'go-zero-study'
     static_configs:
       # 目标的采集地址
-      - targets: ['golang:9080']
+      - targets: ['host.docker.internal:9080']
         labels:
           # 自定义标签
           app: 'user-api'
           env: 'test'
 
-      - targets: ['golang:9090']
+      - targets: ['host.docker.internal:9094']
         labels:
           app: 'user-rpc'
           env: 'test'
 
-      - targets: ['golang:9081']
+      - targets: ['host.docker.internal:9081']
         labels:
           app: 'product-api'
           env: 'test'
 
-      - targets: ['golang:9091']
+      - targets: ['host.docker.internal:9091']
         labels:
           app: 'product-rpc'
           env: 'test'
 
-      - targets: ['golang:9082']
+      - targets: ['host.docker.internal:9082']
         labels:
           app: 'order-api'
           env: 'test'
 
-      - targets: ['golang:9092']
+      - targets: ['host.docker.internal:9092']
         labels:
           app: 'order-rpc'
           env: 'test'
 
-      - targets: ['golang:9083']
+      - targets: ['host.docker.internal:9083']
         labels:
           app: 'pay-api'
           env: 'test'
 
-      - targets: ['golang:9093']
+      - targets: ['host.docker.internal:9093']
         labels:
           app: 'pay-rpc'
           env: 'test'
